tests/fixtures/invalid/max_none_str.py
# Cannot call max() with None, Str
x = max(None, "hello")
